feat: added icons

--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -20,5 +20,5 @@
       "@/*": ["src/renderer/src/*"]
     }
   },
-  "include": ["src/renderer/**/*"]
+  "include": ["src/renderer/**/*", "src/preload/index.d.ts"]
 }
