--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "vite": "^7.3.0"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.90.16",
     "firebase": "^12.6.0",
     "jotai": "^2.16.1",
     "papaparse": "^5.5.3",
