--- a/package.json
+++ b/package.json
@@ -55,12 +55,14 @@
     "chart.js": "^4.5.1",
     "firebase": "^12.6.0",
     "html2canvas": "^1.4.1",
+    "i18next": "^25.7.4",
     "jotai": "^2.16.1",
     "jspdf": "^4.0.0",
     "papaparse": "^5.5.3",
     "react": "^19.2.3",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.3",
+    "react-i18next": "^16.5.2",
     "react-router-dom": "^7.10.1"
   }
 }
