--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.16",
     "chart.js": "^4.5.1",
+    "dom-to-image-more": "^3.7.2",
     "firebase": "^12.6.0",
     "html2canvas": "^1.4.1",
     "html5-qrcode": "^2.3.8",
